@@ -139,6 +139,8 @@ ags_lv2_worker_manager_pull_worker(AgsLv2WorkerManager *worker_manager)
   AgsThread *thread;
 
   thread = ags_thread_pool_pull(worker_manager->thread_pool);
+  g_atomic_int_or(&(thread->sync_flags),
+		  (AGS_THREAD_RESUME_INTERRUPTED));
   lv2_worker = ags_lv2_worker_new(thread);
   
   pthread_mutex_lock(AGS_RETURNABLE_THREAD(thread)->reset_mutex);
@@ -148,6 +150,8 @@ ags_lv2_worker_manager_pull_worker(AgsLv2WorkerManager *worker_manager)
   
   ags_returnable_thread_connect_safe_run(AGS_RETURNABLE_THREAD(thread),
 					 ags_lv2_worker_safe_run);
+  g_signal_connect(thread, "interrupted\0",
+		   G_CALLBACK(ags_lv2_worker_interrupted_callback), lv2_worker);
   
   g_atomic_int_or(&(AGS_RETURNABLE_THREAD(thread)->flags),
 		  AGS_RETURNABLE_THREAD_IN_USE);
